Movement Test Demo. Finish Base Weapon Systems. Loadout System. Main Menu. Title Card

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -22,7 +22,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/TestWorld.TestWorld
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/Player/Main/PlayerM_GM.PlayerM_GM_C
 GlobalDefaultServerGameMode=None
