Weapon Effects/Sounds. Turret Actor. Main Player HUD Update (Healthbar, Crosshair, and Objective). Main Menu. Began working on Wallrun.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,3 +27,7 @@ ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/Player/Main/PlayerM_GM.PlayerM_GM_C
 GlobalDefaultServerGameMode=None
 
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+FrameRateLock=PUFRL_60
+bEnableDynamicMaxFPS=True
+
