Finish Wallrun, Finish Current Turret System, Update All Levels, Update Main Menu,

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -92,6 +92,7 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/MainMenu")
 +MapsToCook=(FilePath="/Game/Maps/DemoWorld")
 +MapsToCook=(FilePath="/Game/Maps/SandboxWorld")
++MapsToCook=(FilePath="/Game/Maps/StartupLevel")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
